fixed name and # link name missmatch in graph documentation html

--- a/WebContent/resources/documentation/graph-help.html
+++ b/WebContent/resources/documentation/graph-help.html
@@ -79,7 +79,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 				</p>
 				
 				</p>
-				<h3><a name="download" href='#'>Exporting Graph Data</a></h3>
+				<h3><a name="export" href='#'>Exporting Graph Data</a></h3>
 				<p>An export button is always visible on the right hand side of the graphs where the graph picture can be exported in png, jpeg, pdf or svg format which will be downloaded to your computer:
 				<img src="img/graph_export.png" alt="export button in graph here">
 				<p>The data used to generate the graphs can be downloaded in XLS or TSV formats from the buttons on the top of the page (<img src="img/graph-data-export.png" 
