Terry's changes to phenotype help page.

--- a/WebContent/resources/documentation/phenotype-help.html
+++ b/WebContent/resources/documentation/phenotype-help.html
@@ -38,7 +38,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 			<li><a href="phenotype-help.html">Phenotypes</a> 
 			<ul>
 						<li><a href="phenotype-help.html#details">Phenotype details</a></li>
-						<li><a href="phenotype-help.html#phenotype-stats-panel">Phenotype stats</a></li>
+						<li><a href="phenotype-help.html#phenotype-stats-panel">Phenotype association stats</a></li>
 						<li><a href="phenotype-help.html#associations">Gene-Phenotype associations</a>
 							<ul>
 								<li><a href="phenotype-help.html#dvi">Direct vs. inferred associations</a></li>
@@ -74,8 +74,11 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 				<img class="well" src="img/phenotype-information.png"/>
 				</figure>
 				
-				<h3><a name="phenotype-stats-panel" href='#'>Phenotype stats</a></h3>
-				<p> The percentage of genes associated to the current phenotype in one sex only, say females is the number of genes associated to phenotypeX in 
+				<h3><a name="phenotype-stats-panel" href='#'>Phenotype Association Stats</a></h3>
+				<img class="well" src="img/phenotype-associations-stats.png"/>
+				<p> IMPC mouse strains are subjected to a wide range of phenotype assays, allowing for estimates on the percentage of genes that when knocked out contribute to 
+				a phenotype. As multiple parameters may map to the same phenotype, percentages are calculated across all parameters that map to a phenotype. The percentage of genes 
+				associated to the current phenotype in one sex only, for example females is the number of genes associated to phenotypeX in 
 				females divided by the total number of genes tested in females for parameters potentially leading to phenotypeX associations. Thus, the percent 
 				values we show for females and males do not have to add up to 1 nor do the percentages for males/females only need to be smaller than the combined percentage.</p>
 				<p> The data used for this panel is restricted to EuroPhenome data on B6N and B6NTac strains, to reduce background noise. </p> 				
