update documentation for graphs including images, add api section and update menu in all pages

--- a/WebContent/resources/documentation/search-help.html
+++ b/WebContent/resources/documentation/search-help.html
@@ -55,6 +55,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
                                 <li><a href="image-help.html">Images</a></li>
 				<li><a href="statistics-help.html">Statistics</a> </li>
 				<li><a href="graph-help.html">Graphs</a> </li>
+                <li><a href="api-help.html">RESTful API</a></li>
 			</ul>
 		</div>
 
