--- a/WebContent/resources/documentation/disease-help.html
+++ b/WebContent/resources/documentation/disease-help.html
@@ -54,6 +54,7 @@
                     <li><a href="image-help.html">Images</a></li>
                     <li><a href="statistics-help.html">Statistics</a> </li>
                     <li><a href="graph-help.html">Graphs</a> </li>
+                    <li><a href="api-help.html">RESTful API</a></li>
                 </ul>
 
             </div>
