--- a/WebContent/resources/documentation/image-help.html
+++ b/WebContent/resources/documentation/image-help.html
@@ -46,6 +46,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 				</ul></li>
 			<li><a href="statistics-help.html">Statistics</a> </li>
 			<li><a href="graph-help.html">Graphs</a> </li>
+            <li><a href="api-help.html">RESTful API</a></li>
 			</ul>
 	
 		</div>
