--- a/WebContent/resources/documentation/phenotype-help.html
+++ b/WebContent/resources/documentation/phenotype-help.html
@@ -48,10 +48,11 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 						</li>
 					</ul>
 			</li>
-                        <li><a href="disease-help.html">Diseases</a> </li>
+            <li><a href="disease-help.html">Diseases</a> </li>
 			<li><a href="image-help.html">Images</a></li>
 			<li><a href="statistics-help.html">Statistics</a> </li>
 			<li><a href="graph-help.html">Graphs</a> </li>
+            <li><a href="api-help.html">RESTful API</a></li>
 			</ul>
 	
 		</div>
