use live impc logo instead of beta on docu pages

--- a/WebContent/resources/documentation/statistics-help.html
+++ b/WebContent/resources/documentation/statistics-help.html
@@ -20,7 +20,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 
 	<div class="row">
 		<div class="well">
-			<h1><a id='logo' href=''><img src='img/IMPCBetalogo.png' /></a>IMPC statistics page documentation</h1>
+			<h1><a id='logo' href=''><img src='img/IMPClogo.png' /></a>IMPC statistics page documentation</h1>
 			<p class="lead">Statistics details</p>
 		</div>
 	</div>
