--- a/WebContent/resources/documentation/disease-help.html
+++ b/WebContent/resources/documentation/disease-help.html
@@ -30,7 +30,7 @@
 
         <div class="row">
             <div class="well">
-                <h1><a id='logo' href=''><img src='img/IMPCBetalogo.png' /></a>IMPC images page documentation</h1>
+                <h1><a id='logo' href=''><img src='img/IMPClogo.png' /></a>IMPC images page documentation</h1>
                 <p class="lead">Disease details</p>
             </div>
         </div>
