make the description even MORE clear. so clear. wow

--- a/WebContent/resources/documentation/graph-help.html
+++ b/WebContent/resources/documentation/graph-help.html
@@ -137,8 +137,8 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 				
 				<h2><a name="time_graphs" href='#'>Time Series Graphs</a></h2>
 				<img src="img/graph_time_series.png">
-				<p>Where an observation can be measured as a time series (e.g. cumulative food intake), we display them in a line graph with whiskers and scatter plot. The two lines indicate mean for wild-type and mutant data.
-				Hover over the points on a line to see basic statistics for that set of data.  The measurements are the mean of all data collected at that timepoint and the whiskers indicate standard deviation.
+				<p>Where an observation can be measured as a time series (e.g. cumulative food intake), we display the data in a line graph and scatter plot. The line graph will contain two lines, one each for wild-type and mutant data.  The data points displayed are the mean of all data collected at that timepoint and the whiskers indicate standard deviation.
+				Hover over the points to see basic statistics about the data.  
 
 				<h2><a name="scatter_graphs" href='#'>Scatter Plots Showing Data grouped by Date</a></h2>
 				<img src="img/graph_scatterplot.png">
