add release notes link

--- a/WebContent/resources/documentation/index.html
+++ b/WebContent/resources/documentation/index.html
@@ -39,7 +39,7 @@
 			<li><a href="image-help.html">Images</a></li>
 			<li><a href="statistics-help.html">Statistics</a> </li>
 			<li><a href="graph-help.html">Graphs</a> </li>
-            <li><a href="api-help.html">RESTful API</a></li>
+                        <li><a href="api-help.html">RESTful API</a></li>
 			</ul>
 	
 		</div>
@@ -71,6 +71,12 @@ determine gene to phenotype associations</a></dd>
 				<dd><a href="pdf/IMPC-refCard.pdf"><img src="img/pdf-icon.png" alt="IMPC Quick Reference Card"></a>
 				</dd>
 			</dl>
+                        <dl>
+                                <dt>Release notes</dt>
+                                <dd><a href="release/release-notes.html">List of new features and changes to this release</a>
+                                </dd>
+                        </dl>
+
 		</div>
 	</div>
 
