--- a/WebContent/resources/documentation/release/release-notes.html
+++ b/WebContent/resources/documentation/release/release-notes.html
@@ -20,7 +20,7 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 
 	<div class="row">
 		<div class="well">
-			<h1><a id='logo' href=''><img src='img/IMPClogo.png' /></a>IMPC Release notes</h1>
+			<h1><a id='logo' href=''><img src='../img/IMPClogo.png' /></a>IMPC Release notes</h1>
 			<p class="lead">Latest release notes</p>
 		</div>
 	</div>
