added externalSampleId to the graph data export

--- a/WebContent/resources/documentation/graph-help.html
+++ b/WebContent/resources/documentation/graph-help.html
@@ -100,6 +100,7 @@
 				<tr><td> organisation </td><td> Organization name </td></tr>
 				<tr><td> colonyId </td><td> Colony id </td></tr>
 				<tr><td> dateOfExperiment </td><td> Date of experiment </td></tr>
+				<tr><td> externalSampleId </td><td> Animal id </td></tr>
 				<tr><td> zygosity </td><td> Zygosity </td></tr>
 				<tr><td> sex </td><td> Sex </td></tr>  
 				<tr><td> group </td><td> This field has only 2 values: control or experiment </td></tr>  
