--- a/WebContent/resources/documentation/release/release-notes.html
+++ b/WebContent/resources/documentation/release/release-notes.html
@@ -30,12 +30,12 @@ var _gaq = _gaq || [];_gaq.push(["_setAccount", ""]);_gaq.push(["_trackPageview"
 
 			<div class="page-header"></div> 
 			<dl>
-				<dt>IMPC Data Portal 0.3.1</dt>
+				<dt>IMPC Data Portal 0.3.1 - 27 November 2013</dt>
 				<dd>Integration of IKMC project pages in the IMPC portal</dd>
-				<dd>Disease search: retrieve known gene associations and mouse models for diseases</dd>
+				<dd>Search by disease term: retrieve known gene associations and mouse models for diseases</dd>
 				<dd>Phenotype summary for every gene</dd>
-				<dd>High-level phenotype summaries (e.g. <a href="https://www.mousephenotype.org/data/phenotypes/MP:0005397">https://www.mousephenotype.org/data/phenotypes/MP:0005397)</a></dd>
-				<dd>RESTful API to experimental data and genotype to phenotype associations (<a href="https://github.com/mpi2/PhenotypeArchive/wiki">https://github.com/mpi2/PhenotypeArchive/wiki</a>)</dd>
+				<dd>High-level phenotype summaries (e.g. <a href="https://www.mousephenotype.org/data/phenotypes/MP:0005397">https://www.mousephenotype.org/data/phenotypes/MP:0005397</a>)</dd>
+				<dd>RESTful API to access experimental data and genotype to phenotype associations (<a href="https://github.com/mpi2/PhenotypeArchive/wiki">https://github.com/mpi2/PhenotypeArchive/wiki</a>)</dd>
 				<dd>Comprehensive online documentation</dd>
 			</dl>
 		</div>
