added 1 sentence for the time-series graphs on phen page : "For the mutant lines we do not show the error bars in order to avoid overcrow-ding the graph."

--- a/WebContent/resources/documentation/phenotype-help.html
+++ b/WebContent/resources/documentation/phenotype-help.html
@@ -107,7 +107,7 @@
 				</figure>
 				<p> For time-series data we plot mean values for each mutant <b>strain</b> . We average the values in each strain at each time-point and thus get the plot values. 
 				To simplify visualization of calorimetric parameters, data is binned into discrete time points by taking the mean of values measured between two time points. The 
-				control data represents the mean of all C57BL/6N baseline animals.
+				control data represents the mean of all C57BL/6N baseline animals. For the mutant lines we do not show the error bars in order to avoid overcrow-ding the graph.
 				
 				<p><b> Categorical Data </b> </p>
 				<figure>
