--- a/WebContent/resources/documentation/search-help.html
+++ b/WebContent/resources/documentation/search-help.html
@@ -1,121 +1,160 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!doctype html>
+<!--[if lt IE 7 ]> <html lang="en" class="no-js ie6"> <![endif]-->
+<!--[if IE 7 ]>    <html lang="en" class="no-js ie7"> <![endif]-->
+<!--[if IE 8 ]>    <html lang="en" class="no-js ie8"> <![endif]-->
+<!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
+    <head>
 
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=1024" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-<title>International Mouse Phenotyping Consortium Documentation</title>
+        <title>International Mouse Phenotyping Consortium Documentation</title>
 
-<link type='text/css' rel='stylesheet' href='../css/bootstrap.min.css'  />
-<link type='text/css' rel='stylesheet' href='../css/bootstrap-responsive.min.css'  />
-<script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-<script type="text/javascript" src="../js/helpDocLogo.js"></script>
-<script type="text/javascript"> var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-23433997-1']); _gaq.push(['_trackPageview']); (function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })();</script>
+        <!-- css -->
+        <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600' rel='stylesheet' type='text/css'>
+        <link type='text/css' rel='stylesheet' href='../css/vendor/font-awesome/font-awesome.min.css'  />
+        <link type='text/css' rel='stylesheet' href='../css/default.css'  />
+        <link type='text/css' rel='stylesheet' href='../css/wdm.css'  />
+        <script type='text/javascript' src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+        <script type="text/javascript" src="../js/helpDocLogo.js"></script>
 
-</head>
+        <script type="text/javascript"> var _gaq = _gaq || [];
+            _gaq.push(['_setAccount', 'UA-23433997-1']);
+            _gaq.push(['_trackPageview']);
+            (function() {
+                var ga = document.createElement('script');
+                ga.type = 'text/javascript';
+                ga.async = true;
+                ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+                var s = document.getElementsByTagName('script')[0];
+                s.parentNode.insertBefore(ga, s);
+            })();
+        </script>
 
-<body class="container">
+    </head>
 
-	<div class="row">
-		<div class="well">
-			<h1><a id='logo' href=''><img src='img/IMPClogo.png' /></a>IMPC search page documentation</h1>	
-			<p class="lead">Search page details</p>
-		</div>
-	</div>
+    <body id="top" class="one-sidebar sidebar-first">
+        <div id="wrapper">
 
-	<div class="row">
-		<div class="span3">
+            <header id="header">
+                <div class="region region-header">
+                    <div id="logo">
+                        <a href=""><img src="../img/impc.png" alt="IMPC Logo" /></a>
+                    </div>
+                    <div class="clear"></div>
+                </div>
+            </header>        
 
-			<div class="page-header"><h3>Quick help links</h3></div>
-	
-			<ul id="navbar" class="nav nav-list">
-				<li><a href="index.html">Overview</a></li>
-				<li><a href="search-help.html">Search</a>
-					<ul>
-						<li><a href="search-help.html#details">Quick Search</a>
-							<ul>
-								<li><a href="search-help.html#quick_gene_srch">Quick Gene Search</a></li>
-								<li><a href="search-help.html#quick_pheno_srch">Quick Phenotype Search</a></li>
-								<li><a href="search-help.html#quick_disease_srch">Quick Disease Search</a></li>
-								<li><a href="search-help.html#quick_anatomy_srch">Quick Anatomy Search</a></li>
-								<li><a href="search-help.html#quick_param_srch">Quick Assay Search</a></li>								
-								<li><a href="search-help.html#quick_img_srch">Quick Image Search</a></li>					
-							</ul>						
-						</li>
-						<li><a href="search-help.html#complex_srch">Complex Search</a></li>	
-						<li><a href="search-help.html#export">Data Export of Search Results</a></li>					
-					</ul>				
-				</li>
-				<li><a href="gene-help.html">Genes</span></a> </li>
-				<li><a href="phenotype-help.html">Phenotypes</a> </li>
+            <div id="main">
+
+                <!-- Breadcrumb -->
+                <div class="breadcrumb"><a href="/">Home</a> › <a href="index.html">Documentation</a> › Search</div>
+
+                <!-- Sidebar First -->
+                <div class="region region-sidebar-first">
+                    <div id="facet" class="block">
+                        <div class="head">Quick help links</div>
+                        <div class="content node">
+                            <ul>
+                                <li><a href="index.html">Overview</a></li>
+                                <li><a href="search-help.html">Search</a>
+                                    <ul>
+                                        <li><a href="search-help.html#details">Quick Search</a>
+                                            <ul>
+                                                <li><a href="search-help.html#quick_gene_srch">Quick Gene Search</a></li>
+                                                <li><a href="search-help.html#quick_pheno_srch">Quick Phenotype Search</a></li>
+                                                <li><a href="search-help.html#quick_disease_srch">Quick Disease Search</a></li>
+                                                <li><a href="search-help.html#quick_anatomy_srch">Quick Anatomy Search</a></li>
+                                                <li><a href="search-help.html#quick_param_srch">Quick Assay Search</a></li>								
+                                                <li><a href="search-help.html#quick_img_srch">Quick Image Search</a></li>					
+                                            </ul>						
+                                        </li>
+                                        <li><a href="search-help.html#complex_srch">Complex Search</a></li>	
+                                        <li><a href="search-help.html#export">Data Export of Search Results</a></li>					
+                                    </ul>				
+                                </li>
+                                <li><a href="gene-help.html">Genes</span></a> </li>
+                                <li><a href="phenotype-help.html">Phenotypes</a> </li>
                                 <li><a href="disease-help.html">Diseases</a> </li>
                                 <li><a href="image-help.html">Images</a></li>
-				<li><a href="statistics-help.html">Statistics</a> </li>
-				<li><a href="graph-help.html">Graphs</a> </li>
-                <li><a href="api-help.html">RESTful API</a></li>
-			</ul>
-		</div>
+                                <li><a href="statistics-help.html">Statistics</a> </li>
+                                <li><a href="graph-help.html">Graphs</a> </li>
+                                <li><a href="api-help.html">RESTful API</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
 
-		<div class="span9">
+                <!-- Maincontent -->
 
-			<div class="page-header"><h3>Explore the diverse entry points to mouse phenotype data.</h3></div> 
-			<h3><a name="quick_gene_srch" href='#'>Quick Gene Search</a></h3>			
-			<div>Type a gene symbol, gene ID, name or human orthologue into search box and returned results will returned relevant gene pages.
-			<p>Eg. search by gene symbol "akt2":<br>
-			</div>			
-			<img src='img/quick_gene_search.jpg' />
-			
-			<h3><a name="quick_pheno_srch" href='#'>Quick Phenotype Search</a></h3>
-			<div>Type an abnormal phenotype or MP:ID, click on phenotype facet on the left panel, and the results grid will return relevant phenotype pages.
-			<p>Eg. search by phenotype "glucose":<br>
-			</div> 
-			<img src='img/quick_phenotype_search.jpg' />
-                        
-                        <h3><a name="quick_disease_srch" href='#'>Quick Disease Search</a></h3>
-			<div>Type a (partial) disease name or ID (OMIM, Orphanet or DECIPHER), click on the disease facet and the the results grid will return relevant disease pages.
-			<p>Eg. Search for "cardiac" diseases:<br>
-			</div> 
-			<img src='img/disease_search.png' />
-			
-			<h3><a name="quick_anatomy_srch" href='#'>Quick Anatomy Search</a></h3>
-			<div>Type an anatomical entity or MA:ID, click on the anatomy facet on the on the left panel, and the results grid will return relevant anatomy pages.
-			<p>Eg. search by anatomy "eye":<br>
-			</div> 
-			<img src='img/quick_anatomy_search.jpg' />
-			
-			<h3><a name="quick_param_srch" href='#'>Quick Assay Search</a></h3>
-			<div>Type an assay, parameter or IMPReSS ID, click on the procedure facet on the left panel, and the results grid will return relevant parameter pages. 
-			<p>Eg. search by parameter "grip strength":<br>
-			</div> 
-			<img src='img/quick_param_search.jpg' />	
-			
-			
-			<h3><a name="quick_img_srch" href='#'>Quick Image Search</a></h3>
-			<div>Type a gene, phenotype, assay, or anatomical entity, click on the images facet on the left panel and the results grid will return relevant image pages.
-			<p>By default, Image View will be displayed, where annotations to an image is enlisted.<p>Eg. search by phenotype "immune":<br>				
-			</div> 
-			<img src='img/quick_img_search.jpg' />
-			
-			<p>To view images grouped by annotations, simply click on the "Show Annotation View" button to the top-right corner of the results grid. The label of the same button will then be switched to "Show Image View" so that you can toggle the views.</p>
-			<img src='img/quick_img_search_annotView.jpg' />
-			
-			
-			<h3><a name="complex_srch" href='#'>Complex Search</a></h3>
-			<div>Facets on left hand panel can be used in combination to generate complex queries.</div>
-			<img src='img/facetPanel.jpg' />
-			
-			<h3><a name="export" href='#'>Data Export of Search Results</a></h3>
-			<div>Click on the export icon <img src='img/export.jpg' /> to the top-right corner of the results grid to expand or hide it. 
-			When expanded, <img src='img/export_expanded.jpg' /><p><p>
-			click on either TSV (tab separated) or XLS (MS Excel) buttons for format of export. 
-			<p>To limit the export data on current page only, choose the buttons of the "Current paginated entries in table", 
-			whereas "All entries in table" will export the whole search results".
-			<br>A warning message dialog box will be displayed if the dataset is large and download can take longer depending on your network speed.</div>			
-			
-		</div>
-	</div>	
+                <div class="region region-content">              
 
-</body>
+                    <div class="block block-system">
+
+                        <div class="content node">
+
+                            <h3>Explore the diverse entry points to mouse phenotype data.</h3>
+
+                            <h4><a name="quick_gene_srch" href='#'>Quick Gene Search</a></h4>			
+                            <div>Type a gene symbol, gene ID, name or human orthologue into search box and returned results will returned relevant gene pages.
+                                <p>Eg. search by gene symbol "akt2":<br>
+                            </div>			
+                            <img src='img/quick_gene_search.jpg' />
+
+                            <h4><a name="quick_pheno_srch" href='#'>Quick Phenotype Search</a></h4>
+                            <div>Type an abnormal phenotype or MP:ID, click on phenotype facet on the left panel, and the results grid will return relevant phenotype pages.
+                                <p>Eg. search by phenotype "glucose":<br>
+                            </div> 
+                            <img src='img/quick_phenotype_search.jpg' />
+
+                            <h4><a name="quick_disease_srch" href='#'>Quick Disease Search</a></h4>
+                            <div>Type a (partial) disease name or ID (OMIM, Orphanet or DECIPHER), click on the disease facet and the the results grid will return relevant disease pages.
+                                <p>Eg. Search for "cardiac" diseases:<br>
+                            </div> 
+                            <img src='img/disease_search.png' />
+
+                            <h4><a name="quick_anatomy_srch" href='#'>Quick Anatomy Search</a></h4>
+                            <div>Type an anatomical entity or MA:ID, click on the anatomy facet on the on the left panel, and the results grid will return relevant anatomy pages.
+                                <p>Eg. search by anatomy "eye":<br>
+                            </div> 
+                            <img src='img/quick_anatomy_search.jpg' />
+
+                            <h4><a name="quick_param_srch" href='#'>Quick Assay Search</a></h4>
+                            <div>Type an assay, parameter or IMPReSS ID, click on the procedure facet on the left panel, and the results grid will return relevant parameter pages. 
+                                <p>Eg. search by parameter "grip strength":<br>
+                            </div> 
+                            <img src='img/quick_param_search.jpg' />	
+
+
+                            <h4><a name="quick_img_srch" href='#'>Quick Image Search</a></h4>
+                            <div>Type a gene, phenotype, assay, or anatomical entity, click on the images facet on the left panel and the results grid will return relevant image pages.
+                                <p>By default, Image View will be displayed, where annotations to an image is enlisted.<p>Eg. search by phenotype "immune":<br>				
+                            </div> 
+                            <img src='img/quick_img_search.jpg' />
+
+                            <p>To view images grouped by annotations, simply click on the "Show Annotation View" button to the top-right corner of the results grid. The label of the same button will then be switched to "Show Image View" so that you can toggle the views.</p>
+                            <img src='img/quick_img_search_annotView.jpg' />
+
+
+                            <h4><a name="complex_srch" href='#'>Complex Search</a></h4>
+                            <div>Facets on left hand panel can be used in combination to generate complex queries.</div>
+                            <img src='img/facetPanel.jpg' />
+
+                            <h4><a name="export" href='#'>Data Export of Search Results</a></h4>
+                            <div>Click on the export icon <img src='img/export.jpg' /> to the top-right corner of the results grid to expand or hide it. 
+                                When expanded, <img src='img/export_expanded.jpg' /><p><p>
+                                    click on either TSV (tab separated) or XLS (MS Excel) buttons for format of export. 
+                                <p>To limit the export data on current page only, choose the buttons of the "Current paginated entries in table", 
+                                    whereas "All entries in table" will export the whole search results".
+                                <br>A warning message dialog box will be displayed if the dataset is large and download can take longer depending on your network speed.</div>			
+
+                        </div>
+                    </div>	
+                </div>
+            </div>
+        </div>
+
+    </body>
 </html>
-</t:genericpage>
