capitalized unidimen graph columns labels

--- a/WebContent/resources/documentation/graph-help.html
+++ b/WebContent/resources/documentation/graph-help.html
@@ -93,7 +93,7 @@
                             <h4><a name="data" href='#'>Where is the data coming from?</a></h4>
                             <p>
                                 Currently data for the graphs are obtained from legacy data with associated phenotype calls, p values and effect sizes as calculated from <a href="http://www.europhenome.org/"> Europhenome</a>. Association tables from gene and phenotype pages contain links to the original data in the Europhenome resource. Graphs next to these links are new graphs representing the same data from Europhenome.</p>  
-                            <p> As IMPC data is quality controlled, these new graphs will be used to display the data from the IMPC procedures. 
+                            <p> Rows in tables with IMPC for the "Analysis" use the same data set but the p values and other model fitting estimates are calculated by the new IMPC statistical methods. New data from the IMPC procedures once quality controlled is also available with an IMPC label. 
                                 <img src="img/graph_links.png">
                             </p>
 
