new images from graph-help still working on it

--- a/WebContent/resources/documentation/graph-help.html
+++ b/WebContent/resources/documentation/graph-help.html
@@ -101,7 +101,7 @@
                             <p>Graphs are interective so that you can adjust the view to your liking. Click on a legend will remove a set of data from the graph. This is especially useful if you wish to remove "noise" from a graph and focus on the control or experimental data. <img src="img/graph_legends.png"> 
                             </p>
 
-                            <p>After clicking on the control legend the male control data has dissappeared:<img src="img/graph_no_control.png" alt="graph with no control here">
+                            <p>After clicking on the control legend the male homozygote data has dissappeared:<img src="img/graph_no_control.png" alt="graph with no control here">
                             </p>
                             <p>Hovering over a data point or error bars displays extra information about the data point:<img src="img/graph_hover.png" alt="graph with a hovering over mouse label here">
                             </p>
