more graph help updates

--- a/WebContent/resources/documentation/graph-help.html
+++ b/WebContent/resources/documentation/graph-help.html
@@ -138,6 +138,7 @@
                                 <tr><td> sex </td><td> Sex </td></tr>  
                                 <tr><td> group </td><td> This field has only 2 values: control or experiment </td></tr>  
                                 <tr><td> category </td><td> Column is exported only for categorical data. It contains the label of the category assigned. </td></tr>  
+                                <tr><td> meta data </td><td> Shows any meta data in respect of equipment used which can be used to seperate the data sets used for statistical analysis</td></tr>  
                                 <tr><td> dataPoint </td><td> Coulmn is exported for unidimensional or time series data. It contains the value resulted from the measurment decribed by the current procedure.</td></tr>  
                                 <tr><td> discretePoint </td><td> Column exported for time series data. It contains the relative timepoints at which the measurments were made. </td></tr> 
                             </table>
